<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_drugs"
        android:icon="@drawable/ic_drugs"
        android:title="@string/title_drugs" />

    <item
        android:id="@+id/navigation_illness"
        android:icon="@drawable/ic_sick"
        android:title="@string/title_illness" />

    <item
        android:id="@+id/navigation_rig"
        android:icon="@drawable/ic_rig"
        android:title="@string/title_rig" />

    <item
        android:id="@+id/navigation_paraclinic"
        android:icon="@drawable/ic_microscope"
        android:title="@string/title_paraclinic" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_infoabtus"
        android:title="@string/title_info" />

</menu>
